# simple_blockchain

./: Cargo.toml  README.md  index.ts
src/: block.rs  blockchain.rs  lib.rs  max_attempts_error.rs
