[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
#opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Storage"] }
sha2 = "0.10.8"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"